--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "author": "Forrest L Norvell <ogd@aoaioxxysz.net> (https://github.com/othiym23)",
   "license": "Apache License 2.0",
   "devDependencies": {
-    "tap": "~0.3.3"
+    "tap": "~0.3.3",
+    "chai": "~1.4.2"
   },
   "optionalDependencies": {
     "buffertools": "~1.1.0"
