--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deeper",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Node.js-specific \"deep equality\" / structural equality tester.",
   "main": "deeper.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/othiym23/deeper.git"
+    "url": "https://github.com/othiym23/node-deeper.git"
   },
   "keywords": [
     "deep",
