--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "deeper",
   "version": "1.0.3",
-  "description": "Node.js-specific \"deep equality\" / structural equality tester.",
+  "description": "JavaScript \"deep equality\" / structural equality tester with Node.js flavor.",
   "main": "deeper.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "tap test/deeper.tap.js"
+    "test": "standard && tap test/*.js --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,10 +19,9 @@
     "testing"
   ],
   "author": "Forrest L Norvell <ogd@aoaioxxysz.net> (https://github.com/othiym23)",
-  "license": "Apache License 2.0",
+  "license": "BSD-2-Clause",
   "devDependencies": {
-    "chai": "^2.3.0",
-    "inherits": "^1.0.0",
-    "tap": "^0.7.1"
+    "standard": "^5.1.1",
+    "tap": "^1.3.2"
   }
 }
