--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Forrest L Norvell <ogd@aoaioxxysz.net> (https://github.com/othiym23)",
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "buffertools": "^2.1.3",
     "standard": "^5.1.1",
     "tap": "^1.3.2"
   }
