--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - '0.8'
   - '0.10'
   - '0.12'
-  - 'iojs'
+  - 'iojs-2.5.0'
 before_install:
   - npm install -g npm@latest
+  - npm install -g pangyp
+  - npm config set node-gyp pangyp
